deployment/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content-api
  template:
    metadata:
      labels:
        app: content-api
    spec:
      containers:
        - name: content-api
          image: 276020727502.dkr.ecr.us-east-2.amazonaws.com/content:00
          ports:
            - containerPort: 3000
