deployment/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: content-api-service
  namespace: test-content 
spec:
  selector:
    app: content-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
  type: ClusterIP
