deployment/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: content-api-ingress
  namespace: test-content 
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:977558945179:certificate/68845a99-3bfc-4713-a602-8ab2c7be9753
    alb.ingress.kubernetes.io/group.name: cognianxtgendev
    alb.ingress.kubernetes.io/healthcheck-path: /api
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - host: api.dev.content.cognia.org 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: content-api-service
                port:
                  number: 8080
